# sugaru

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml
examples/gitlab_vault_premium/: .expected-gitlab-ci.yml  .your-gitlab-ci.yml  README.md  vault.py
examples/helm_values/: README.md  helm_values.py  values.yaml
examples/json_2_yaml/: random_person.py
examples/json_random/: README.md  my.json  random_person.py
examples/quickstart/: .my-gitlab-ci.yml  python_tests.py
examples/toml_examples/: README.md  my.toml  servers.py  toml_utils.py
sugaru/: __init__.py  __main__.py  interfaces.py  logging.py  plugin_loader.py  sugarator.py  types.py  utils.py
sugaru/file_loader/: __init__.py  logging.py
sugaru/file_loader/simple_json/: __init__.py
sugaru/file_loader/simple_yaml/: __init__.py  loader.py
sugaru/file_writer/: __init__.py  types.py
sugaru/file_writer/simple_json/: __init__.py
sugaru/file_writer/simple_yaml/: __init__.py
sugaru/object_loader/: __init__.py  module_loader.py  objects_loader.py  signature_checker.py  simple_loader.py
sugaru/plugin_executor/: __init__.py  executor.py
sugaru/plugin_loader/: __init__.py  module_loader.py  object_creator.py  objects_loader.py  signature_checker.py  simple_loader.py  utils.py
sugaru/utils/: __init__.py  encode_decode.py  names_and_types.py  object_loading.py  signature.py
tests/cli/: conftest.py  test_yaml_dummy_plugin.py
tests/file_loader/: test_simple_json_loader.py  test_simple_yaml_loader.py
tests/file_writer/: test_simple_json_writer.py  test_simple_yaml_writer.py
tests/object_loader/: __init__.py  conftest.py  test_check_plugin_signatures.py  test_create_objects.py  test_load_objects.py  test_module_loader.py
tests/plugin_executor/: test_plugin_executor.py  test_various_plugin_signatures.py
tests/plugin_loader/: __init__.py  conftest.py  test_check_plugin_signatures.py  test_create_objects.py  test_load_objects.py  test_module_loader.py  test_plugin_loader.py
tests/sugarator/: __init__.py  conftest.py  test_sugarator.py
tests/utils/: test_check_object_signature.py  test_encode_decode.py  test_names_and_types.py
